maze.lessons.maze.wallfollower.WallFollowerMaze.scala.error
Escaper:11: error: ';' expected but '=' found.
 keepHandOnSideWall(): Boolean = {
                               ^